File Name change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  </head>
     <body>
 	<!---header star--->
-	    <header>
+	<header>
 		<div class="container">
              <div class="row">
 			     <div class="col-md-12">
@@ -22,7 +22,7 @@
 		         </div>
 		  </div>       
      </div>
-		</header>
+</header>
 	<!---header end--->
 	<!---icon star--->
 	                 <div class="aa">
@@ -39,59 +39,59 @@
 				                                </div>
 				                          </div>
 	                                 </div>
-	 <div class="col-md-4">
-		<div class="item d-flex justify-content-start ">
-				 <div class="icon">
-					  <i class="fas fa-map-marker-alt"></i>
-				</div>
-			<div class="about text-justify">
-						<h4>ADDRESS :</h4>
-					 <h5>Hazrat Shahjalal Intl Airport,Kurmitola. Dhaka 1229</h5>
-			</div>
-	    </div> 
-  </div>
-				 <div class="col-md-4">
-				      <div class="item d-flex justify-content-start ">
-				             <div class="icon">
-					                  <i class="fas fa-phone"></i>
-								</div>
-			<div class="about text-justify">
-				<h4>CONTACT US :</h4>
-			   <h5>Call : +8801630689351, 028901190</h5>
-		   </div>
-				  </div>
-	                     </div>
-                              </div>  
-                                </div>
-				                    </div>
+	                                           <div class="col-md-4">
+		                                            <div class="item d-flex justify-content-start ">
+				                                          <div class="icon">
+					                                          <i class="fas fa-map-marker-alt"></i>
+				                                          </div>
+			                                                    <div class="about text-justify">
+						                                               <h4>ADDRESS :</h4>
+					                                                  <h5>Hazrat Shahjalal Intl Airport,Kurmitola. Dhaka 1229</h5>
+			                                                    </div>
+	                                                      </div> 
+                                                    </div>
+				                                        <div class="col-md-4">
+				                                             <div class="item d-flex justify-content-start ">
+				                                                  <div class="icon">
+					                                                 <i class="fas fa-phone"></i>
+								                                  </div>
+			                                                           <div class="about text-justify">
+				                                                             <h4>CONTACT US :</h4>
+			                                                                  <h5>Call : +8801630689351, 028901190</h5>
+		                                                             </div>
+				                                                 </div>
+	                                                         </div>
+                                  </div>  
+                             </div>
+				      </div>
 	<!---icon end--->
 	<!---menu star--->
 	     <div class="header">
-	        <div class="col-md-12">
+	         <div class="col-md-12">
 			     <div class="menu">
-				 <ul>
-				    <li><a href="index.html">Home</a></li>
-					<li><a href="index.html">About us</a></li>
-					<li><a href="index.html">Notice</a></li>
-					<li><a href="index.html">courses</a></li>
-					<li><a href="index.html">enrollment</a></li>
-					<li><a href="index.html">excutive mesages</a></li>
-					<li><a href="index.html">contact us</a></li>
-					<li><a href="index.html">our fleet</a></li>
+				     <ul>
+				          <li><a href="index.html">Home</a></li>
+					      <li><a href="index.html">About us</a></li>
+					      <li><a href="index.html">Notice</a></li>
+					      <li><a href="index.html">courses</a></li>
+					      <li><a href="index.html">enrollment</a></li>
+					      <li><a href="index.html">excutive mesages</a></li>
+					      <li><a href="index.html">contact us</a></li>
+					      <li><a href="index.html">our fleet</a></li>
 					
 					
-			      </ul>
-				 </div>
-			   </div>
-	  </div>
+					   </ul>
+				  </div>
+	          </div>
+	      </div>
 	<!---menu end--->
 	<!---background--->
 
 	  <div class="">
 	       <div class="mm bg-danger text-white">
 		      <div class="bb">
-	             <p> Courses Offered by<br/>
-               BFA & GA</p>
+	                <p> Courses Offered by<br/>
+                   BFA & GA</p>
 			 </div>
 		 </div>
 	</div>
@@ -101,20 +101,20 @@
 	    <div class="container">
 		    <div class="row"> 
 			     <div class="col-md-4">
-				   <div class="think">
-				       <img src="img/10.jpg"/>
-					  </div>
-					  <div class="pp">
-					   ppl</div>
-					   <div class="zz">
-					   private pilot's license
-					   </div>
+				              <div class="think">
+				                  <img src="img/10.jpg"/>
+			                 </div>
+                                  <div class="pp">
+					            ppl</div>
+					                <div class="zz">
+					                      private pilot's license
+					                </div>
 				   </div>
-				   <div class="col-md-4">
-				   <div class="think">
-				       <img src="img/11.jpg"/>
-					  </div>
-					  <div class="pp">
+				                       <div class="col-md-4">
+				                              <div class="think">
+				                                    <img src="img/11.jpg"/>
+					                        </div>
+					                                   <div class="pp">
 					   CPL</div>
 					   <div class="cpl">
 					   commercial pilot's license
@@ -191,7 +191,7 @@
 			<div class="copyright">
 						      <div class="container">
 							  <div class="tt">
-						        <p>Copyright ©2020 All rights reserved |This website is developed by <a href ="">Nishat Akter Munny</a></p>
+						        <p>Copyright ï¿½2020 All rights reserved |This website is developed by <a href ="">Nishat Akter Munny</a></p>
 						     </div>
 							 </div>
 						   </div>
